Fix word wrap on first slide

--- a/css/slides.css
+++ b/css/slides.css
@@ -43,6 +43,7 @@ img {
 }
 .remark-slide-content {
   font-size: inherit;
+  padding: 1em 3.5em;
 }
 
 pre, code {
